--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == README
 
-This is a run-through of the Ruby on Rails Getting Started Tutorial located [here](http://guides.rubyonrails.org/getting_started.html)
+This is a run-through of the Ruby on Rails Getting Started Tutorial located at http://guides.rubyonrails.org/getting_started.html
